--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    background-color: #FFF7ED;
+    background-color: white;
     font-family: "Inter", sans-serif;
 }
 
@@ -142,4 +142,81 @@ header a:hover {
     background-color: #161616;
     color: white;
     border-radius: 10px;
+}
+
+/*** VAN PAGE ***/
+
+.van_main {
+    padding: 0 25px;
+}
+
+.van_main > h3 {
+    font-size: 32px;
+    font-weight: 700;
+    color: #161616;
+}
+
+.van_main > .filters {
+    display: flex;
+    justify-content: space-between;
+}
+
+ .van_type {
+    border: none;
+    background-color: #FFEAD0;
+    border-radius: 5px;
+    padding: 6px 26px;
+    font-size: 16px;
+}
+
+.clear_filter {
+    text-decoration: underline;
+    border: none;
+    background-color: white;
+    font-weight: 500;
+    text-underline-offset: 3px;
+}
+
+.van_items_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 55px;
+    gap: 34px;
+    justify-items: center;
+}
+
+.van_item > img {
+    max-width: 100%;
+    border-radius: 5px;
+}
+
+.van_info {
+    display: flex;
+    justify-content: space-between;
+}
+
+.van_price > h3{
+    margin-bottom: 0;
+}
+
+.van_style {
+    border-radius: 5px;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 16px;
+    color: white;
+    margin: 0;
+    width: 85px;
+}
+
+.rugged {
+    background-color: #115E59;
+}
+
+.simple {
+    background-color: #E17654
+}
+
+.luxury {
+    background-color: #161616;
 }
