--- a/index.css
+++ b/index.css
@@ -195,13 +195,8 @@ header a:hover {
     justify-content: space-between;
 }
 
-.van_price { 
-    text-decoration: none;
-}
-
 .van_price > h3{
     margin-bottom: 0;
-    text-decoration: none;
 
 }
 
@@ -225,4 +220,21 @@ header a:hover {
 
 .luxury {
     background-color: #161616;
+}
+
+.host-nav {
+    display: flex;
+}
+
+.host-nav a {
+    text-decoration: none;
+    color: #4D4D4D;
+    font-weight: 500;
+    padding: 5px 20px;
+}
+
+.host-nav a:hover {
+    color: #161616;
+    text-decoration: underline;
+    font-weight: 600;
 }
